cmake_minimum_required(VERSION 2.8)
project( Entropy )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Entropy EntropyMain.cpp Entropy.cpp )
target_link_libraries( Entropy ${OpenCV_LIBS} )
add_executable( Checker Checker.cpp )
target_link_libraries( Checker ${OpenCV_LIBS} )
add_executable( SVM SVM.cpp Entropy.cpp )
target_link_libraries( SVM PRIVATE ${OpenCV_LIBS} )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(SVM PUBLIC OpenMP::OpenMP_CXX)
endif()